FOM-91: - Add boolean property 'isCommentClassificationMandatory' for ProjectEntity (but comment out ORM mapping) - Add boolean property 'isCommentClassificationMandatory' for ProjectResponse DTO. - update OpenAPI spec and create client lib
