# apps/api/openapi/swagger-spec.json
@@ -240,6 +240,10 @@
           "createTimestamp": {
             "type": "string",
             "description": "ISO-formatted timestamp"
+          },
+          "isCommentClassificationMandatory": {
+            "type": "boolean",
+            "default": true
           }
         },
         "required": [
@@ -253,7 +257,8 @@
           "forestClient",
           "workflowState",
           "revisionCount",
-          "createTimestamp"
+          "createTimestamp",
+          "isCommentClassificationMandatory"
         ]
       },
       "ProjectMetricsResponse": {
