# apps/api/src/app/modules/project/project.entity.ts
@@ -60,4 +60,6 @@ export class Project extends ApiBaseEntity<Project> {
   @OneToMany(type => Submission, (submission) => submission.project) 
   submissions: Submission[];
   
+  // @Column({ name: 'comment_classification_mandatory'})
+  isCommentClassificationMandatory: boolean;
 }
