# apps/api/src/app/modules/project/project.service.ts
@@ -220,6 +220,7 @@ export class ProjectService extends DataService<Project, Repository<Project>, Pr
     response.name = entity.name;
     response.revisionCount = entity.revisionCount;
     response.workflowState = entity.workflowState;
+    response.isCommentClassificationMandatory = entity.isCommentClassificationMandatory;
 
     return response;
   }
